--- a/style.css
+++ b/style.css
@@ -12,10 +12,19 @@
 
 @import url("../accelerate-theme/style.css");
 
+
+h5{
+font-size: 14px;
+color: #878787;
+}
+
 /* Homepage Styles */
+
+
 .home-page {
     background: url("img/taxi-photo.jpg") no-repeat scroll left center / cover rgba(0, 0, 0, 0);
 }
+
 
 #masthead {
     background: none repeat scroll 0 0 #45ac9d;
@@ -23,6 +32,11 @@
 
 .button {
     background: none repeat scroll 0 0 #45ac9d;
+}
+
+#masthead nav ul li{
+float: left;
+margin: 0 10px;
 }
 
 .blog-post {
@@ -48,4 +62,26 @@
 	font-weight: bold;
 	color: #45ac9d;
 	text-transform: uppercase;
+}
+
+/*Case Studies */
+
+article.case-study {
+margin:40px 0 0;
+}
+
+aside.case-study-sidebar {
+float:left;
+width:314px;
+margin: 0 40px 0 0;
+}
+
+div.case-study-images {
+float: left;
+width:600px;
+}
+
+div.case-study-images img{
+margin-bottom:50px;
+border:1px solid #dddddd;
 }
